--- a/frontend/src/_styles/modules/configurations-cart.styl
+++ b/frontend/src/_styles/modules/configurations-cart.styl
@@ -8,7 +8,8 @@
         background-repeat no-repeat
         background-size cover
         background-position 50% 50%
-        height 238px
+        min-height 238px
+        height 100%
         width 100%
         font-family 'Panton'
         font-size 20px
