--- a/frontend/src/_styles/modules/form.styl
+++ b/frontend/src/_styles/modules/form.styl
@@ -102,13 +102,14 @@
         font-size 26px
         color #ffffff
         line-height 32px
-        padding-bottom 27px
+        padding-bottom 15px
 
     &__description
         font-family 'Rubik'
         font-size 16px
         color #fafafa
         line-height 20px
+        padding 12px 0
 
     input
         margin-bottom 16px
