--- a/frontend/src/catalog/index.jade
+++ b/frontend/src/catalog/index.jade
@@ -9,88 +9,88 @@ block content
             .row
                 .col.col--xl-12
                     .ui-page__header.ui-heading.ui-heading--lvl2.ui-heading--black каталог
-            .row.ui-catalog__line
-                .col.col--xl-4
+            .row
+                .col.col--xl-4.col--lg-4.col--md-6.col--md-flex
                     .ui-product-cart
                         .ui-product-cart__title(style="background-image: url('/images/catalog/mobile.png')") МОБИЛЬНЫЕ#[br] ПЕРЕГОРОДКИ 
                         .ui-product-cart__description Мобильные, или модульные офисные перегородки «ОКИ-ДОКИ» являются уникальной разработкой нашей компании...
                         .ui-product-cart__link
-                            a.ui-circle-button.ui-circle-button--grey.ui-circle-button--size-md(href="#")
+                            a.ui-circle-button.ui-circle-button--grey.ui-circle-button--size-md(href="/catalog/mobile/")
                                 i +
-                .col.col--xl-4
+                .col.col--xl-4.col--lg-4.col--md-6.col--md-flex
                     .ui-product-cart
                         .ui-product-cart__title(style="background-image: url('/images/catalog/fixed.png')") СТАЦИОНАРНЫЕ#[br] ПЕРЕГОРОДКИ
                         .ui-product-cart__description Стационарные перегородки служат для оптимизации офисного, торгового или складского пространства.
                         .ui-product-cart__link
                             a.ui-circle-button.ui-circle-button--grey.ui-circle-button--size-md(href="#")
                                 i +
-                .col.col--xl-4
+                .col.col--xl-4.col--lg-4.col--md-6.col--md-flex
                     .ui-product-cart
                         .ui-product-cart__title(style="background-image: url('/images/catalog/additional.png')") ЛЁГКИЕ ЭКОНОМ-#[br] ПЕРЕГОРОДКИ
                         .ui-product-cart__description Лёгкие перегородки Оки-Доки Лайт#[br] Лёгкие перегородки Оки-Доки Директ
                         .ui-product-cart__link
                             a.ui-circle-button.ui-circle-button--grey.ui-circle-button--size-md(href="#")
                                 i +
-            .row.ui-catalog__line
-                .col.col--xl-4
+
+                .col.col--xl-4.col--lg-4.col--md-6.col--md-flex
                     .ui-product-cart
                         .ui-product-cart__title(style="background-image: url('/images/catalog/celnostekljannye-peregorodki.png')") СТЕКЛЯННЫЕ#[br] ПЕРЕГОРОДКИ
                         .ui-product-cart__description Цельностеклянные офисные перегородки и стеклянные конструкции других модификаций используются практически...
                         .ui-product-cart__link
                             a.ui-circle-button.ui-circle-button--grey.ui-circle-button--size-md(href="#")
                                 i +
-                .col.col--xl-4
+                .col.col--xl-4.col--lg-4.col--md-6.col--md-flex
                     .ui-product-cart
                         .ui-product-cart__title(style="background-image: url('/images/catalog/furniture.png')") ОФИСНАЯ#[br] МЕБЕЛЬ
                         .ui-product-cart__description Мебель для персонала#[br] Кабинеты руководителя#[br] Офисные кресла
                         .ui-product-cart__link
                             a.ui-circle-button.ui-circle-button--grey.ui-circle-button--size-md(href="#")
                                 i +
-                .col.col--xl-4
+                .col.col--xl-4.col--lg-4.col--md-6.col--md-flex
                     .ui-product-cart
                         .ui-product-cart__title(style="background-image: url('/images/catalog/materials.png')") МАТЕРИАЛЫ
                         .ui-product-cart__description В качестве основы непрозрачного заполнения перегородок используются гипсокартон, ДСП или шлифованный...
                         .ui-product-cart__link
                             a.ui-circle-button.ui-circle-button--grey.ui-circle-button--size-md(href="#")
                                 i +
-            .row.ui-catalog__line
-                .col.col--xl-4
+
+                .col.col--xl-4.col--lg-4.col--md-6.col--md-flex
                     .ui-product-cart
                         .ui-product-cart__title(style="background-image: url('/images/catalog/door.png')") ДВЕРИ
                         .ui-product-cart__description В систему перегородок входят дверные блоки с различными видами дверей. По типу открывания — распашные...
                         .ui-product-cart__link
                             a.ui-circle-button.ui-circle-button--grey.ui-circle-button--size-md(href="#")
                                 i +
-                .col.col--xl-4
+                .col.col--xl-4.col--lg-4.col--md-6.col--md-flex
                     .ui-product-cart
                         .ui-product-cart__title(style="background-image: url('/images/catalog/inlets-groups.png')") ВХОДНЫЕ#[br] ГРУППЫ
                         .ui-product-cart__description Входная группа — это не просто перегородки с дверьми.Входная группа является важным элементом интер...
                         .ui-product-cart__link
                             a.ui-circle-button.ui-circle-button--grey.ui-circle-button--size-md(href="#")
                                 i +
-                .col.col--xl-4
+                .col.col--xl-4.col--lg-4.col--md-6.col--md-flex
                     .ui-product-cart
                         .ui-product-cart__title(style="background-image: url('/images/catalog/triplex.png')") ИЗДЕЛИЯ#[br ]ИЗ ТРИПЛЕКСА
                         .ui-product-cart__description Наша очередная новинка — услуги по изготовлению и монтажу изделий из триплекса. Основная часть этих...
                         .ui-product-cart__link
                             a.ui-circle-button.ui-circle-button--grey.ui-circle-button--size-md(href="#")
                                 i +
-            .row.ui-catalog__line
-                .col.col--xl-4
+
+                .col.col--xl-4.col--lg-4.col--md-6.col--md-flex
                     .ui-product-cart
                         .ui-product-cart__title(style="background-image: url('/images/catalog/shower-cabins.png')") ДУШЕВЫЕ#[br] КАБИНЫ
                         .ui-product-cart__description В рамках программы по расширению ассортимента предлагаем услуги по проектированию, изготовлению...
                         .ui-product-cart__link
                             a.ui-circle-button.ui-circle-button--grey.ui-circle-button--size-md(href="#")
                                 i +
-                .col.col--xl-4
+                .col.col--xl-4.col--lg-4.col--md-6.col--md-flex
                     .ui-product-cart
                         .ui-product-cart__title(style="background-image: url('/images/catalog/glass-doors.png')") СТЕКЛЯННЫЕ#[br]ДВЕРИ
                         .ui-product-cart__description Стеклянные двери различных модификаций все больше входят в моду при обустройстве офисных помещений.
                         .ui-product-cart__link
                             a.ui-circle-button.ui-circle-button--grey.ui-circle-button--size-md(href="#")
                                 i +
-                .col.col--xl-4
+                .col.col--xl-4.col--lg-4.col--md-6.col--md-flex
                     .ui-product-cart
                         .ui-product-cart__title(style="background-image: url('/images/catalog/santehnicheskie-peregorodki.png')") САНТЕХНИЧЕСКИЕ#[br]ПЕРЕГОРОДКИ
                         .ui-product-cart__description Сантехнические перегородки — это небольшие конструкции, которые отличаются особой лёгкостью.
@@ -102,18 +102,18 @@ block content
             .col.col--xl-12
                 .grid
                     form.row.row--no-gutters.ui-form.ui-form-calcalate
-                        .col.col--xl-3.ui-form-calcalate__header
+                        .col.col--xl-3.col--lg-3.ui-form-calcalate__header
                             .ui-form-calcalate__title Узнать стоимость
                             .ui-form-calcalate__description Вы можете получить расчет стоимости в течение 1-2 часов
-                        .col.col--xl-9
+                        .col.col--xl-9.col--lg-9
                             .ui-form-calcalate__content
                                 .grid
                                     .row
-                                        .col.col--xl-4
+                                        .col.col--xl-4.col--lg-4.col--md-4
                                             input.ui-input.ui-input--block(type="text", placeholder="Контактное лицо")
-                                        .col.col--xl-4
+                                        .col.col--xl-4.col--lg-4.col--md-4
                                             input.ui-input.ui-input--block(type="text", placeholder="Телефон")
-                                        .col.col--xl-4
+                                        .col.col--xl-4.col--lg-4.col--md-4
                                             a.ui-button.ui-button--size-lg.ui-button--block.ui-button--default Расчитать стоимость
                                 .ui-form-calcalate__about 
                                     .ui-form-calcalate__icon !
