--- a/frontend/src/configurations/index.jade
+++ b/frontend/src/configurations/index.jade
@@ -16,37 +16,37 @@ block content
                             li · &nbsp &nbsp Совмещение разных по высоте модулей;
                             li · &nbsp &nbsp Обеспечение конструкций встроенным кабель-каналом и розетками – такая возможность позволяет оснастить рабочее место всем необходимым оборудованием;
             .row
-                .col.col--xl-6
+                .col.col--xl-6.col--lg-6.col--lg-flex
                     .ui-configurations-cart
                         .ui-configurations-cart__title(style="background-image: url('/images/configurations-cart/configurationM1.png')") Конфигурация № М1
                         .ui-configurations-cart__description
                             .ui-configurations-cart__header Использование 1,5 и 1,2 модулей, покрытых тканью №6.
                             p Профиль конструкции стандартной расцветки, мебель в представленной конфигурации – в цвете фризской ольхи.
-                .col.col--xl-6
+                .col.col--xl-6.col--lg-6.col--lg-flex
                     .ui-configurations-cart
                         .ui-configurations-cart__title(style="background-image: url('/images/configurations-cart/configurationM2.png')") Конфигурация № М2
                         .ui-configurations-cart__description
                             .ui-configurations-cart__header Модули конфигурации высотой 150 и 135 см. Декорированы тканью: снизу – Т4, сверху – Т12.
                             p Столешницы – пепельно-серые оттенки, расцветка профиля – стандартная. Встроенный кабель-канала, возможность установки розеток по центру модуля.
-                .col.col--xl-6
+                .col.col--xl-6.col--lg-6.col--lg-flex
                     .ui-configurations-cart
                         .ui-configurations-cart__title(style="background-image: url('/images/configurations-cart/configurationM1.png')") Конфигурация № М1
                         .ui-configurations-cart__description
                               .ui-configurations-cart__header Использование 1,5 и 1,2 модулей, покрытых тканью №6.
                               p Профиль конструкции стандартной расцветки, мебель в представленной конфигурации – в цвете фризской ольхи.
-                .col.col--xl-6
+                .col.col--xl-6.col--lg-6.col--lg-flex
                     .ui-configurations-cart
                         .ui-configurations-cart__title(style="background-image: url('/images/configurations-cart/configurationM2.png')") Конфигурация № М2
                         .ui-configurations-cart__description
                             .ui-configurations-cart__header Модули конфигурации высотой 150 и 135 см. Декорированы тканью: снизу – Т4, сверху – Т12.
                             p Столешницы – пепельно-серые оттенки, расцветка профиля – стандартная. Встроенный кабель-канала, возможность установки розеток по центру модуля.
-                .col.col--xl-6
+                .col.col--xl-6.col--lg-6.col--lg-flex
                     .ui-configurations-cart
                         .ui-configurations-cart__title(style="background-image: url('/images/configurations-cart/configurationM1.png')") Конфигурация № М1
                         .ui-configurations-cart__description
                             .ui-configurations-cart__header Использование 1,5 и 1,2 модулей, покрытых тканью №6.
                             p Профиль конструкции стандартной расцветки, мебель в представленной конфигурации – в цвете фризской ольхи.
-                .col.col--xl-6
+                .col.col--xl-6.col--lg-6.col--lg-flex
                     .ui-configurations-cart
                         .ui-configurations-cart__title(style="background-image: url('/images/configurations-cart/configurationM2.png')") Конфигурация № М2
                         .ui-configurations-cart__description
