--- a/frontend/src/faq/index.jade
+++ b/frontend/src/faq/index.jade
@@ -84,7 +84,7 @@ block content
                                         | Что означает «Оки-Доки»?
                                     .ui-showfaq Все будет хорошо! Согласен делать хорошо! Все хорошо!
             .row.ui-page-faq__form
-                .col.col--xl-8
+                .col.col--xl-8.col--lg-10
                     .ui-page-faq__text Задать свой вопрос
                         span #[br]Поля, отмеченные *, обязательны для заполнения
                     form.grid.ui-form.ui-form-request
@@ -92,10 +92,10 @@ block content
                             .col.col--xl-4
                                 .ui-form-request__title Пишите нам
                                 .ui-form-request__description Наши менеджеры максимально оперативно ответят на все Ваши вопросы
-                            .col.col--xl-4
+                            .col.col--xl-4.col--md-6
                                 input.ui-input.ui-input--block(type="text", placeholder="Контактное лицо")
                                 input.ui-input.ui-input--block(type="text", placeholder="E-mail")
                                 a.ui-button.ui-button--size-lg.ui-button--block.ui-button--default Отправить
-                            .col.col--xl-4
+                            .col.col--xl-4.col--md-6
                                 input.ui-input.ui-input--block(type="text", placeholder="Тема")
                                 textarea.ui-textarea(type="text", placeholder="Ваше сообщение")
