--- a/frontend/src/projects/index.jade
+++ b/frontend/src/projects/index.jade
@@ -10,7 +10,7 @@ block content
                 .col.col--xl-12
                     .ui-page__header.ui-heading.ui-heading--lvl2.ui-heading--black проекты компании
             .row
-                .col.col--xl-4
+                .col.col--xl-4.col--lg-4.col--md-6.col--md-flex
                     .ui-projects-cart
                         .ui-projects-cart__img(style="background-image: url('/images/projects/1.png')")
                             .ui-projects-cart__title ЗАО коммерческий банк#[br] «Ростовский универсальный»
@@ -21,7 +21,7 @@ block content
                             .ui-projects-cart__link
                                 a.ui-circle-button.ui-circle-button--black.ui-circle-button--size-md(href="/projects/history/detail/")
                                     i +
-                .col.col--xl-4
+                .col.col--xl-4.col--lg-4.col--md-6.col--md-flex
                     .ui-projects-cart
                         .ui-projects-cart__img(style="background-image: url('/images/projects/2.png')")
                             .ui-projects-cart__title «Керии Логистикс»
@@ -32,7 +32,7 @@ block content
                             .ui-projects-cart__link
                                 a.ui-circle-button.ui-circle-button--black.ui-circle-button--size-md(href="#")
                                     i +
-                .col.col--xl-4
+                .col.col--xl-4.col--lg-4.col--md-6.col--md-flex
                     .ui-projects-cart
                         .ui-projects-cart__img(style="background-image: url('/images/projects/3.png')")
                             .ui-projects-cart__title «МКУНТ»
@@ -43,7 +43,7 @@ block content
                             .ui-projects-cart__link
                                 a.ui-circle-button.ui-circle-button--black.ui-circle-button--size-md(href="#")
                                     i +
-                .col.col--xl-4
+                .col.col--xl-4.col--lg-4.col--md-6.col--md-flex
                     .ui-projects-cart
                         .ui-projects-cart__img(style="background-image: url('/images/projects/4.png')")
                             .ui-projects-cart__title ООО «Молочный век»
@@ -54,7 +54,7 @@ block content
                             .ui-projects-cart__link
                                 a.ui-circle-button.ui-circle-button--black.ui-circle-button--size-md(href="#")
                                     i +
-                .col.col--xl-4
+                .col.col--xl-4.col--lg-4.col--md-6.col--md-flex
                     .ui-projects-cart
                         .ui-projects-cart__img(style="background-image: url('/images/projects/5.png')")
                             .ui-projects-cart__title ИП Ленисова Е.А.
@@ -65,7 +65,7 @@ block content
                             .ui-projects-cart__link
                                 a.ui-circle-button.ui-circle-button--black.ui-circle-button--size-md(href="#")
                                     i +
-                .col.col--xl-4
+                .col.col--xl-4.col--lg-4.col--md-6.col--md-flex
                     .ui-projects-cart
                         .ui-projects-cart__img(style="background-image: url('/images/projects/6.png')")
                             .ui-projects-cart__title «ИЛАН»
@@ -76,7 +76,7 @@ block content
                             .ui-projects-cart__link
                                 a.ui-circle-button.ui-circle-button--black.ui-circle-button--size-md(href="#")
                                     i +
-                .col.col--xl-4
+                .col.col--xl-4.col--lg-4.col--md-6.col--md-flex
                     .ui-projects-cart
                         .ui-projects-cart__img(style="background-image: url('/images/projects/7.png')")
                             .ui-projects-cart__title ООО «Фиас констракшн»
@@ -87,7 +87,7 @@ block content
                             .ui-projects-cart__link
                                 a.ui-circle-button.ui-circle-button--black.ui-circle-button--size-md(href="#")
                                     i +
-                .col.col--xl-4
+                .col.col--xl-4.col--lg-4.col--md-6.col--md-flex
                     .ui-projects-cart
                         .ui-projects-cart__img(style="background-image: url('/images/projects/8.png')")
                             .ui-projects-cart__title «Русконстракшн»
@@ -98,7 +98,7 @@ block content
                             .ui-projects-cart__link
                                 a.ui-circle-button.ui-circle-button--black.ui-circle-button--size-md(href="#")
                                     i +
-                .col.col--xl-4
+                .col.col--xl-4.col--lg-4.col--md-6.col--md-flex
                     .ui-projects-cart
                         .ui-projects-cart__img(style="background-image: url('/images/projects/9.png')")
                             .ui-projects-cart__title Производственная компания
@@ -127,18 +127,18 @@ block content
             .col.col--xl-12
                 .grid
                     form.row.row--no-gutters.ui-form.ui-form-calcalate
-                        .col.col--xl-3.ui-form-calcalate__header
+                        .col.col--xl-3.col--lg-3.ui-form-calcalate__header
                             .ui-form-calcalate__title Узнать стоимость
                             .ui-form-calcalate__description Вы можете получить расчет стоимости в течение 1-2 часов
-                        .col.col--xl-9
+                        .col.col--xl-9.col--lg-9.col--md-12
                             .ui-form-calcalate__content
                                 .grid
                                     .row
-                                        .col.col--xl-4
+                                        .col.col--xl-4.col--lg-4.col--md-4
                                             input.ui-input.ui-input--block(type="text", placeholder="Контактное лицо")
-                                        .col.col--xl-4
+                                        .col.col--xl-4.col--lg-4.col--md-4
                                             input.ui-input.ui-input--block(type="text", placeholder="Телефон")
-                                        .col.col--xl-4
+                                        .col.col--xl-4.col--lg-4.col--md-4
                                             a.ui-button.ui-button--size-lg.ui-button--block.ui-button--default Расчитать стоимость
                                 .ui-form-calcalate__about 
                                     .ui-form-calcalate__icon !
