--- a/frontend/src/_styles/catalog-detail.styl
+++ b/frontend/src/_styles/catalog-detail.styl
@@ -3,7 +3,12 @@
     padding-bottom 105px
 
     &__models
-        display block
+        display flex
+        margin-top 25px
+
+        @media (min-width: $breakpoints['xl'])
+            display block
+            margin-top 0
 
     &__image
         text-align center
@@ -143,6 +148,10 @@
     box-shadow 0px 3px 21px 0px rgba(0, 0, 0, 0.1)
     color $color-dark
     cursor pointer
+    max-width 25%
+
+    @media (min-width: $breakpoints['xl'])
+        max-width 100%
 
     &__image
         text-align center
@@ -158,7 +167,10 @@
 
 
 .ui-product-model + .ui-product-model
-    margin-top 12px
+    margin-left 12px
+
+    @media (min-width: $breakpoints['xl'])
+        margin-top 12px
 
 .ui-works
     padding-bottom 75px
