--- a/frontend/src/_styles/modules/button.styl
+++ b/frontend/src/_styles/modules/button.styl
@@ -70,7 +70,7 @@
     &--transparent
         background-color rgba(11, 11, 11, 0.5)
         color $color-darkcoral
-        padding 20px
+        padding 20px 10px
         width 145px
 
         &:hover
@@ -106,9 +106,11 @@
         display block
         text-align center
         width 100%
+        padding-left 0
+        padding-right 0
 
     &--callback
-        padding 8px
+        padding 8px 0
         display block
         text-align center
         width 100%
@@ -171,18 +173,6 @@
           bottom 12px
           right 12px
           font-size 24px
-
-.ui-quarter-button
-    font-family 'Fira Sans'
-    height 100%
-    width 100%
-    background #000
-    font-size 50px
-    color #fff
-    align-items center
-    justify-content center
-    display flex
-    padding 54px 0
 
 .ui-icon-button
     outline 0
