--- a/frontend/src/_styles/modules/press-cart.styl
+++ b/frontend/src/_styles/modules/press-cart.styl
@@ -2,8 +2,7 @@
     box-shadow 0px 3px 5px 0px rgba(0, 0, 0, 0.1)
     display flex
     flex-direction column
-    min-height 100%
-
+    margin-bottom 30px
 
     &:hover &__img
         &:after
