--- a/frontend/src/_styles/modules/product-cart.styl
+++ b/frontend/src/_styles/modules/product-cart.styl
@@ -52,31 +52,43 @@
     color #fff
     line-height 22px
     font-weight bold
-    display flex
-    justify-content space-between
     margin-bottom 17px
+    cursor pointer
+
+    &__content
+        flex 1
+        display flex
+        flex-direction column
+        justify-content space-around
+        padding 10px 15px
 
     &__link
         width 130px
+        font-family 'Fira Sans'
+        height 100%
+        background #000
+        font-size 50px
+        color #fff
+        align-items center
+        justify-content center
+        display flex
+        padding 54px 0
+        transition all .1s ease
 
-    &__info
-        flex 1
-        position relative
-
-    &__title
-        position absolute
-        top 20px
-        left 21px
-
-    &__price
-        position absolute
-        bottom 27px
-        left 21px
+    &:hover
+        & ^[0]__link
+            background-color #963830
+            color #fff
+            width 75px
 
 .ui-product-cart
     box-shadow 0px 3px 5px 0px rgba(0, 0, 0, .1)
     position relative
     cursor pointer
+    margin-bottom 30px
+    flex 1
+    display flex
+    flex-direction column
 
     &:hover &__description
         background-color $color-bondiblue
@@ -108,9 +120,7 @@
         font-size 16px
         color #090909
         padding 25px 65px 40px 25px
-        display flex
-        align-items center
-        height 119px
+        flex 1
 
     &__link
         position absolute
