--- a/frontend/src/_styles/modules/projects-cart.styl
+++ b/frontend/src/_styles/modules/projects-cart.styl
@@ -2,6 +2,8 @@
     box-shadow 0px 3px 21px 0px rgba(0, 0, 0, 0.1)
     width 100%
     margin 15px 0
+    display flex
+    flex-direction column
 
     &:hover &__title
         background rgba(214, 80, 69, 0.7)
@@ -28,6 +30,7 @@
         background $color-whitesmoke
         color $color-darkjunglegreen
         font-family 'Panton'
+        flex 1
         position relative
 
     &__time
