--- a/frontend/src/about/index.jade
+++ b/frontend/src/about/index.jade
@@ -11,12 +11,12 @@ block content
                 .col.col--xl-12
                     .ui-page__header.ui-heading.ui-heading--lvl2.ui-heading--black о компании
             .row.ui-about__line
-                .col.col--xl-6
+                .col.col--xl-6.col--md-6
                     .ui-about-photo(style="background-image: url('/images/about/1.png')")
                         .ui-about-photo__text
                             p.
                                 Компания «ОКИ-ДОКИ» работает на рынке офисных перегородок и офисной мебели с 2000 г. и выполнила с начала деятельности несколько тысяч проектов. За время работы компания организовала собственное производство и сформировала штат опытных специалистов.
-                .col.col--xl-6
+                .col.col--xl-6.col--md-6
                     .ui-text-block
                         .ui-text-block__title Опыт
                         .ui-text-block__text
