--- a/frontend/src/about/press/index.jade
+++ b/frontend/src/about/press/index.jade
@@ -11,7 +11,7 @@ block content
                 .col.col--xl-12
                     .ui-page__header.ui-heading.ui-heading--lvl2.ui-heading--black статьи
             .row.ui-about__line
-                .col.col--xl-3
+                .col.col--xl-3.col--lg-4.col--md-6.col--md-flex
                     .ui-press-cart
                         .ui-press-cart__img(style="background-image: url('/images/press/1.png')")
                         .ui-press-cart__content
@@ -20,7 +20,7 @@ block content
                             .ui-press-cart__link
                                 a.ui-circle-button.ui-circle-button--black.ui-circle-button--size-xs(href="#")
                                     i +
-                .col.col--xl-3
+                .col.col--xl-3.col--lg-4.col--md-6.col--md-flex
                     .ui-press-cart
                         .ui-press-cart__img(style="background-image: url('/images/press/2.png')")
                         .ui-press-cart__content
@@ -29,7 +29,7 @@ block content
                             .ui-press-cart__link
                                 a.ui-circle-button.ui-circle-button--black.ui-circle-button--size-xs(href="#")
                                     i +
-                .col.col--xl-3
+                .col.col--xl-3.col--lg-4.col--md-6.col--md-flex
                     .ui-press-cart
                         .ui-press-cart__img(style="background-image: url('/images/press/3.png')")
                         .ui-press-cart__content
@@ -38,7 +38,7 @@ block content
                             .ui-press-cart__link
                                 a.ui-circle-button.ui-circle-button--black.ui-circle-button--size-xs(href="#")
                                     i +
-                .col.col--xl-3
+                .col.col--xl-3.col--lg-4.col--md-6.col--md-flex
                     .ui-press-cart
                         .ui-press-cart__img(style="background-image: url('/images/press/4.png')")
                         .ui-press-cart__content
@@ -47,8 +47,8 @@ block content
                             .ui-press-cart__link
                                 a.ui-circle-button.ui-circle-button--black.ui-circle-button--size-xs(href="#")
                                     i +
-            .row.ui-about__line
-                .col.col--xl-3
+
+                .col.col--xl-3.col--lg-4.col--md-6.col--md-flex
                     .ui-press-cart
                         .ui-press-cart__img(style="background-image: url('/images/press/1.png')")
                         .ui-press-cart__content  
@@ -57,7 +57,7 @@ block content
                             .ui-press-cart__link
                                 a.ui-circle-button.ui-circle-button--black.ui-circle-button--size-xs(href="#")
                                     i +
-                .col.col--xl-3
+                .col.col--xl-3.col--lg-4.col--md-6.col--md-flex
                     .ui-press-cart
                         .ui-press-cart__img(style="background-image: url('/images/press/2.png')")
                         .ui-press-cart__content
@@ -66,7 +66,7 @@ block content
                             .ui-press-cart__link
                                 a.ui-circle-button.ui-circle-button--black.ui-circle-button--size-xs(href="#")
                                     i +
-                .col.col--xl-3
+                .col.col--xl-3.col--lg-4.col--md-6.col--md-flex
                     .ui-press-cart
                         .ui-press-cart__img(style="background-image: url('/images/press/3.png')")
                         .ui-press-cart__content
@@ -75,7 +75,7 @@ block content
                             .ui-press-cart__link
                                 a.ui-circle-button.ui-circle-button--black.ui-circle-button--size-xs(href="#")
                                     i +
-                .col.col--xl-3
+                .col.col--xl-3.col--lg-4.col--md-6.col--md-flex
                     .ui-press-cart
                         .ui-press-cart__img(style="background-image: url('/images/press/4.png')")
                         .ui-press-cart__content
@@ -84,8 +84,8 @@ block content
                             .ui-press-cart__link
                                 a.ui-circle-button.ui-circle-button--black.ui-circle-button--size-xs(href="#")
                                     i +
-            .row.ui-about__line
-                .col.col--xl-3
+
+                .col.col--xl-3.col--lg-4.col--md-6.col--md-flex
                     .ui-press-cart
                         .ui-press-cart__img(style="background-image: url('/images/press/1.png')")
                         .ui-press-cart__content
@@ -94,7 +94,7 @@ block content
                             .ui-press-cart__link
                                 a.ui-circle-button.ui-circle-button--black.ui-circle-button--size-xs(href="#")
                                     i +
-                .col.col--xl-3
+                .col.col--xl-3.col--lg-4.col--md-6.col--md-flex
                     .ui-press-cart
                         .ui-press-cart__img(style="background-image: url('/images/press/2.png')")
                         .ui-press-cart__content
@@ -103,7 +103,7 @@ block content
                             .ui-press-cart__link
                                 a.ui-circle-button.ui-circle-button--black.ui-circle-button--size-xs(href="#")
                                     i +
-                .col.col--xl-3
+                .col.col--xl-3.col--lg-4.col--md-6.col--md-flex
                     .ui-press-cart
                         .ui-press-cart__img(style="background-image: url('/images/press/3.png')")
                         .ui-press-cart__content
@@ -112,7 +112,7 @@ block content
                             .ui-press-cart__link
                                 a.ui-circle-button.ui-circle-button--black.ui-circle-button--size-xs(href="#")
                                     i +
-                .col.col--xl-3
+                .col.col--xl-3.col--lg-4.col--md-6.col--md-flex
                     .ui-press-cart
                         .ui-press-cart__img(style="background-image: url('/images/press/4.png')")
                         .ui-press-cart__content
