--- a/frontend/src/contact/index.jade
+++ b/frontend/src/contact/index.jade
@@ -11,37 +11,38 @@ block content
                 .col.col--xl-12
                     .ui-page__header.ui-heading.ui-heading--lvl2.ui-heading--black контакты
             .row.row--xl-center
-                .col.col--xl-3
-                    .ui-contact__item
-                        .ui-contact__icon
-                            svg(xmlns="http://www.w3.org/2000/svg", width="38", height="40", viewBox="0 0 74.6 77")
-                                path(d="M70.6,73V33.4L55.1,41.2V33.4l-15.3,8V33.1L24.4,43,21.8,20.1H8.9L3.8,73h-4v4H74.4V73H70.6ZM7.8,73l4.7-48.8h5.7L23.8,73H7.8Zm58.8,0H27.8L24.9,47.4l10.9-7V48l15.3-8v7.7l15.5-7.8V73ZM48.2,66.3H61.6V54H48.2V66.3Zm4-8.3h5.4v4.3H52.2V58ZM23.9,10.1H37.5A10.07,10.07,0,0,0,47.6,0h-4a6.12,6.12,0,0,1-6.1,6.1H23.9A10.07,10.07,0,0,0,13.8,16.2h4A6.12,6.12,0,0,1,23.9,10.1Zm7.2,56.2H44.5V54H31.1V66.3Zm4-8.3h5.4v4.3H35.1V58Z")
-                        .ui-contact__text Собсветнное производство
-                    .ui-contact__item
-                        .ui-contact__icon
-                            svg(xmlns="http://www.w3.org/2000/svg", width="38", height="40", viewBox="0 0 74.6 77")
-                                path(d="M70.6,73V33.4L55.1,41.2V33.4l-15.3,8V33.1L24.4,43,21.8,20.1H8.9L3.8,73h-4v4H74.4V73H70.6ZM7.8,73l4.7-48.8h5.7L23.8,73H7.8Zm58.8,0H27.8L24.9,47.4l10.9-7V48l15.3-8v7.7l15.5-7.8V73ZM48.2,66.3H61.6V54H48.2V66.3Zm4-8.3h5.4v4.3H52.2V58ZM23.9,10.1H37.5A10.07,10.07,0,0,0,47.6,0h-4a6.12,6.12,0,0,1-6.1,6.1H23.9A10.07,10.07,0,0,0,13.8,16.2h4A6.12,6.12,0,0,1,23.9,10.1Zm7.2,56.2H44.5V54H31.1V66.3Zm4-8.3h5.4v4.3H35.1V58Z")
-                        .ui-contact__text Быстрая доставка
-                    .ui-contact__item
-                        .ui-contact__icon
-                            svg(xmlns="http://www.w3.org/2000/svg", width="38", height="40", viewBox="0 0 74.6 77")
-                                path(d="M70.6,73V33.4L55.1,41.2V33.4l-15.3,8V33.1L24.4,43,21.8,20.1H8.9L3.8,73h-4v4H74.4V73H70.6ZM7.8,73l4.7-48.8h5.7L23.8,73H7.8Zm58.8,0H27.8L24.9,47.4l10.9-7V48l15.3-8v7.7l15.5-7.8V73ZM48.2,66.3H61.6V54H48.2V66.3Zm4-8.3h5.4v4.3H52.2V58ZM23.9,10.1H37.5A10.07,10.07,0,0,0,47.6,0h-4a6.12,6.12,0,0,1-6.1,6.1H23.9A10.07,10.07,0,0,0,13.8,16.2h4A6.12,6.12,0,0,1,23.9,10.1Zm7.2,56.2H44.5V54H31.1V66.3Zm4-8.3h5.4v4.3H35.1V58Z")
-                        .ui-contact__text Выгодная цена
-                    .ui-contact__item
-                        .ui-contact__icon
-                            svg(xmlns="http://www.w3.org/2000/svg", width="38", height="40", viewBox="0 0 74.6 77")
-                                path(d="M70.6,73V33.4L55.1,41.2V33.4l-15.3,8V33.1L24.4,43,21.8,20.1H8.9L3.8,73h-4v4H74.4V73H70.6ZM7.8,73l4.7-48.8h5.7L23.8,73H7.8Zm58.8,0H27.8L24.9,47.4l10.9-7V48l15.3-8v7.7l15.5-7.8V73ZM48.2,66.3H61.6V54H48.2V66.3Zm4-8.3h5.4v4.3H52.2V58ZM23.9,10.1H37.5A10.07,10.07,0,0,0,47.6,0h-4a6.12,6.12,0,0,1-6.1,6.1H23.9A10.07,10.07,0,0,0,13.8,16.2h4A6.12,6.12,0,0,1,23.9,10.1Zm7.2,56.2H44.5V54H31.1V66.3Zm4-8.3h5.4v4.3H35.1V58Z")
-                        .ui-contact__text Кратчайшие сроки
-                .col.col--xl-6
+                .col.col--xl-3.col--lg-4
+                    .row.row--no-gutters
+                        .col.col--no-gutters.col--lg-12.col--md-6.ui-contact__item
+                            .ui-contact__icon
+                                svg(xmlns="http://www.w3.org/2000/svg", width="38", height="40", viewBox="0 0 74.6 77")
+                                    path(d="M70.6,73V33.4L55.1,41.2V33.4l-15.3,8V33.1L24.4,43,21.8,20.1H8.9L3.8,73h-4v4H74.4V73H70.6ZM7.8,73l4.7-48.8h5.7L23.8,73H7.8Zm58.8,0H27.8L24.9,47.4l10.9-7V48l15.3-8v7.7l15.5-7.8V73ZM48.2,66.3H61.6V54H48.2V66.3Zm4-8.3h5.4v4.3H52.2V58ZM23.9,10.1H37.5A10.07,10.07,0,0,0,47.6,0h-4a6.12,6.12,0,0,1-6.1,6.1H23.9A10.07,10.07,0,0,0,13.8,16.2h4A6.12,6.12,0,0,1,23.9,10.1Zm7.2,56.2H44.5V54H31.1V66.3Zm4-8.3h5.4v4.3H35.1V58Z")
+                            .ui-contact__text Собсветнное производство
+                        .col.col--no-gutters.col--lg-12.col--md-6.ui-contact__item
+                            .ui-contact__icon
+                                svg(xmlns="http://www.w3.org/2000/svg", width="38", height="40", viewBox="0 0 74.6 77")
+                                    path(d="M70.6,73V33.4L55.1,41.2V33.4l-15.3,8V33.1L24.4,43,21.8,20.1H8.9L3.8,73h-4v4H74.4V73H70.6ZM7.8,73l4.7-48.8h5.7L23.8,73H7.8Zm58.8,0H27.8L24.9,47.4l10.9-7V48l15.3-8v7.7l15.5-7.8V73ZM48.2,66.3H61.6V54H48.2V66.3Zm4-8.3h5.4v4.3H52.2V58ZM23.9,10.1H37.5A10.07,10.07,0,0,0,47.6,0h-4a6.12,6.12,0,0,1-6.1,6.1H23.9A10.07,10.07,0,0,0,13.8,16.2h4A6.12,6.12,0,0,1,23.9,10.1Zm7.2,56.2H44.5V54H31.1V66.3Zm4-8.3h5.4v4.3H35.1V58Z")
+                            .ui-contact__text Быстрая доставка
+                        .col.col--no-gutters.col--lg-12.col--md-6.ui-contact__item
+                            .ui-contact__icon
+                                svg(xmlns="http://www.w3.org/2000/svg", width="38", height="40", viewBox="0 0 74.6 77")
+                                    path(d="M70.6,73V33.4L55.1,41.2V33.4l-15.3,8V33.1L24.4,43,21.8,20.1H8.9L3.8,73h-4v4H74.4V73H70.6ZM7.8,73l4.7-48.8h5.7L23.8,73H7.8Zm58.8,0H27.8L24.9,47.4l10.9-7V48l15.3-8v7.7l15.5-7.8V73ZM48.2,66.3H61.6V54H48.2V66.3Zm4-8.3h5.4v4.3H52.2V58ZM23.9,10.1H37.5A10.07,10.07,0,0,0,47.6,0h-4a6.12,6.12,0,0,1-6.1,6.1H23.9A10.07,10.07,0,0,0,13.8,16.2h4A6.12,6.12,0,0,1,23.9,10.1Zm7.2,56.2H44.5V54H31.1V66.3Zm4-8.3h5.4v4.3H35.1V58Z")
+                            .ui-contact__text Выгодная цена
+                        .col.col--no-gutters.col--lg-12.col--md-6.ui-contact__item
+                            .ui-contact__icon
+                                svg(xmlns="http://www.w3.org/2000/svg", width="38", height="40", viewBox="0 0 74.6 77")
+                                    path(d="M70.6,73V33.4L55.1,41.2V33.4l-15.3,8V33.1L24.4,43,21.8,20.1H8.9L3.8,73h-4v4H74.4V73H70.6ZM7.8,73l4.7-48.8h5.7L23.8,73H7.8Zm58.8,0H27.8L24.9,47.4l10.9-7V48l15.3-8v7.7l15.5-7.8V73ZM48.2,66.3H61.6V54H48.2V66.3Zm4-8.3h5.4v4.3H52.2V58ZM23.9,10.1H37.5A10.07,10.07,0,0,0,47.6,0h-4a6.12,6.12,0,0,1-6.1,6.1H23.9A10.07,10.07,0,0,0,13.8,16.2h4A6.12,6.12,0,0,1,23.9,10.1Zm7.2,56.2H44.5V54H31.1V66.3Zm4-8.3h5.4v4.3H35.1V58Z")
+                            .ui-contact__text Кратчайшие сроки
+                .col.col--xl-6.col--lg-8
                     .grid
                         .row
                           .col.col--xl-12.col--no-gutters
                               .ui-contact__nav
                                   .grid.grid--container
                                       .row
-                                            .col.col--xl-6
+                                            .col.col--xl-6.col--md-6
                                                 a.ui-button.ui-button--block.ui-button--grey Москва
-                                            .col.col--xl-6
+                                            .col.col--xl-6.col--md-6
                                                 a.ui-button.ui-button--block.ui-button--grey регионы
                               .ui-contact__map
                                   .grid.grid--container
@@ -216,21 +217,21 @@ block content
                                                   polygon(fill-rule="evenodd", fill="none", stroke="#d65045", points="238.36 220.07 238.29 220.06 238.24 220.01 230.81 213.92 228.14 215.39 228.07 215.43 228 215.42 220.68 214.59 220.69 214.54 215.81 212 215.77 211.98 215.74 211.95 211.25 206.88 205.42 206.33 203.7 210.59 207.81 216.03 207.86 216.09 207.86 216.16 208.1 220.05 208.12 220.22 207.96 220.28 201.18 223.13 201.18 225.42 203.04 227.04 203.21 227.19 201.09 230.03 201.08 230.01 199.23 232.09 196.73 238.52 196.72 238.57 196.68 238.6 194.58 240.85 193.23 244.39 193.21 244.43 193.18 244.47 190.9 246.98 190.82 247.06 190.7 247.06 188.75 246.92 188.68 251.74 190.86 251.68 191.11 251.67 191.11 255.5 195.91 255.71 196.12 255.72 196.14 255.94 196.35 258.65 198.39 259.15 198.54 259.18 198.57 259.33 198.88 260.7 198.88 260.72 199.18 262.64 199.88 263.6 201.7 263.13 205.74 258.36 205.8 258.28 205.9 258.27 210.47 257.79 213.36 253.2 213.54 252.93 213.75 253.17 215.83 255.48 217.67 254.29 218.39 251.06 218.43 250.88 218.61 250.87 223.69 250.63 225.05 248.92 225.42 245.41 225.43 245.34 225.47 245.28 227.71 242.69 226.06 239.5 226.03 239.44 226.03 239.38 226.16 236.79 226.16 236.64 226.3 236.58 231.69 234.13 237.93 228 242.1 222.49 242.88 220.7 238.36 220.07")
                                                   polygon(fill-rule="evenodd", fill="none", stroke="#d65045", points="18.89 253.18 21.7 249.91 15.38 241.6 19.13 230.97 16.44 228.75 14.1 230.38 4.86 224.07 3.69 225.94 4.04 233.42 0.54 237.16 1.47 242.31 7.55 241.96 14.33 250.49 18.89 253.18")
 
-                .col.col--xl-3
+                .col.col--xl-3.col--lg-12
                     .ui-contact__title Компания Оки-Доки производит доставку, сборку и монтаж своей продукции в любом регионе России.
                         p #[br]Где бы вы ни находились, мы сделаем для вас максимально комфортную цену с учетом затрат на логистику и можем гарантировать кратчайшие сроки выполнения работ.
                     .ui-contact__phone #[br]8-800-700-21-28
             .row.ui-contact__form
-                .col.col--xl-8
+                .col.col--xl-8.col--lg-10
                     form.grid.ui-form.ui-form-request
                         .row
                             .col.col--xl-4
                                 .ui-form-request__title Пишите нам
                                 .ui-form-request__description Наши менеджеры максимально оперативно ответят на все Ваши вопросы
-                            .col.col--xl-4
+                            .col.col--xl-4.col--md-6
                                 input.ui-input.ui-input--block(type="text", placeholder="Контактное лицо")
                                 input.ui-input.ui-input--block(type="text", placeholder="E-mail")
                                 a.ui-button.ui-button--size-lg.ui-button--block.ui-button--default Отправить
-                            .col.col--xl-4
+                            .col.col--xl-4.col--md-6
                                 input.ui-input.ui-input--block(type="text", placeholder="Тема")
                                 textarea.ui-textarea(type="text", placeholder="Ваше сообщение")
