--- a/frontend/src/projects/history/detail/index.jade
+++ b/frontend/src/projects/history/detail/index.jade
@@ -11,7 +11,7 @@ block content
                 .col.col--xl-12
                     .ui-page__header.ui-heading.ui-heading--lvl2.ui-heading--black ИСТОРИЯ ЗАКАЗА - ЗАО КОММЕРЧЕСКИЙ БАНК «РОСТОВСКИЙ УНИВЕРСАЛЬНЫЙ»
             .row.ui-projects-history__line
-                .col.col--xl-4
+                .col.col--xl-4.col--md-6
                     .ui-projects-history-cart
                         .ui-projects-history-cart__title Заказчик: ЗАО Коммерческий банк «Ростовский Универсальный»
                         .ui-projects-history-cart__text Адрес объекта:
@@ -28,14 +28,14 @@ block content
                             span &nbsp 2 недели
                     .ui-projects-history__text
                         p Компания «Оки-Доки» в сжатые сроки создала новый интерьер для офиса ЗАО Коммерческий банк «Ростовский Универсальный». Для формирования пространства были применены Стаионарные перегородки - 127 м2, а также 7 дверей.
-                .col.col--xl-8
+                .col.col--xl-8.col--md-6
                     .ui-projects-history__img(style="background-image: url('/images/projects/detail/1.png')")
             .row.ui-projects-history__line
-                .col.col--xl-4
+                .col.col--xl-4.col--md-6
                     .ui-projects-history__img(style="background-image: url('/images/projects/detail/2.png')")
-                .col.col--xl-4
+                .col.col--xl-4.col--md-6
                     .ui-projects-history__img(style="background-image: url('/images/projects/detail/2.png')")
-                .col.col--xl-4
+                .col.col--xl-4.col--md-12
                     .ui-projects-history__text.ui-projects-history__description 
                         p. 
                             Классическая офисная перегородка на алюминиевом профиле безукоризненно решила планировочные задачи. 
