--- a/frontend/src/service/index.jade
+++ b/frontend/src/service/index.jade
@@ -11,9 +11,9 @@ block content
                 .col.col--xl-12
                     .ui-page__header.ui-heading.ui-heading--lvl2.ui-heading--black СЕРВИС
             .row
-                .col.col--xl-4
+                .col.col--xl-4.col--lg-4
                     .ui-service__photo(style="background-image: url('/images/service/1.png')")
-                .col.col--xl-8
+                .col.col--xl-8.col--lg-8
                     .ui-text-block
                         .ui-text-block__title.ui-text-block__title--grey Компания «ОКИ-ДОКИ» - это
                         .ui-text-block__text 
@@ -21,7 +21,7 @@ block content
                                 творческий союз профессионалов, которые делают свою работу как можно лучше. Мы сознательно проходим «лишнюю милю» для каждого проекта, прорабатывая различные варианты как в техническом плане, так и по дизайну, потому что понимаем, что заказчику учесть все нюансы и сделать оптимальный выбор бывает очень непросто. Советы профессионалов с опытом работы всегда помогают избежать досадных неприятностей в дальнейшей работе. Собственное производство и конструкторское бюро позволяют компании «Оки — Доки» предлагать исключительные и абсолютно авторские решения по организации делового и торгового пространств на самом высоком уровне при минимальных затратах.
                                 #[br]#[br]Наши стандарты качества определены огромным опытом работы на рынке офисных перегородок и требованиями, предъявляемыми самыми взыскательными клиентами.
             .row.ui-service__line
-                .col.col--xl-6
+                .col.col--xl-6.col--lg-6
                     .ui-text-block
                         .ui-text-block__title.ui-text-block__title--grey Качество предпродажного сервиса
                         .ui-text-block__text
@@ -31,7 +31,7 @@ block content
                                 li Оперативная разработка дизайн-проекта и расчёт стоимости конфигурации;
                                 li Рациональный подбор мебели по принципу цена-качество;
                                 li Представление коммерческого предложения в удобном для заказчика виде — цветной 3D дизайн и калькуляция окончательной стоимости проекта.
-                .col.col--xl-6
+                .col.col--xl-6.col--lg-6
                     .ui-text-block
                         .ui-text-block__title.ui-text-block__title--grey Качество продукции
                         .ui-text-block__text
