* frontend: minor fix

--- a/frontend/src/_styles/grid/mixins/helpers.styl
+++ b/frontend/src/_styles/grid/mixins/helpers.styl
@@ -33,6 +33,11 @@ make-col-helpers($breakpoint)
       flex initial
       width auto
 
+  .col--{$breakpoint}-no-gutter-right
+      padding-right 0
+  .col--{$breakpoint}-no-gutter-left
+      padding-left 0
+
 // Helper for aligning the text
 make-text-helpers($breakpoint)
   .text--{$breakpoint}-right
