--- a/frontend/src/catalog/mobile/index.jade
+++ b/frontend/src/catalog/mobile/index.jade
@@ -18,7 +18,7 @@ block content
                             .ui-catalog-detail-info__params
                                 .grid
                                     .row
-                                        .col.col--xl-6.col--lg-6.col--md-6.col--no-gutter-right
+                                        .col.col--xl-6.col--lg-6.col--md-6.col--md-no-gutter-right
                                             .ui-catalog-detail-info__param
                                                 i
                                                     svg(xmlns="http://www.w3.org/2000/svg", viewBox="0 0 21.92 21.92", width="27", height="27")
