--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -10,10 +10,10 @@ block content
                 .col.col--xl-12
                     .ui-catalog-interactives__title Технологии офисного#[br] пространства
             .row
-                .col.col--xl-4.col--lg-4.col--xs-12.col--no-gutter-right
+                .col.col--xl-4.col--lg-4.col--xs-12.col--lg-no-gutter-right
                     .ui-catalog-interactives__product-cart
                         .ui-product-cart-small
-                            .ui-product-cart-small__title.ui-product-cart-small__title--darkcoral Цельностеклянные#[br] перегородки
+                            .ui-product-cart-small__title Цельностеклянные#[br] перегородки
                             .ui-product-cart-small__description Цельностеклянные перегородки имеют безрамную конструкцию и создают ощущение открытого пространства в вашем офисе
                             .ui-product-cart-small__footer
                                 .ui-product-cart-small__price Цена от 3600 руб/м
@@ -29,7 +29,7 @@ block content
         .ui-advantage
             .grid.grid--container
                 .row.row--no-gutters
-                    .col.col--xl.col--lg.col--no-gutters
+                    .col.col--xl.col--lg-6.col--no-gutters
                         .ui-advantage__item
                             .ui-advantage__header
                                 .ui-advantage__icon
@@ -47,7 +47,7 @@ block content
                                 .ui-advantage__link
                                     a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="/advantages/experience/")
                                         i +
-                    .col.col--xl.col--lg.col--no-gutters
+                    .col.col--xl.col--lg-6.col--no-gutters
                         .ui-advantage__item
                             .ui-advantage__header
                                 .ui-advantage__icon
@@ -59,7 +59,7 @@ block content
                                 .ui-advantage__link
                                     a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="/advantages/own-production/")
                                         i +
-                    .col.col--xl.col--lg.col--no-gutters
+                    .col.col--xl.col--lg-6.col--no-gutters
                         .ui-advantage__item
                             .ui-advantage__header
                                 .ui-advantage__icon
@@ -74,7 +74,7 @@ block content
                                 .ui-advantage__link
                                     a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="/advantages/warranty/")
                                         i +
-                    .col.col--xl.col--lg.col--no-gutters
+                    .col.col--xl.col--lg-6.col--no-gutters
                         .ui-advantage__item
                             .ui-advantage__header
                                 .ui-advantage__icon
