--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -5,6 +5,7 @@ block config
 
 block content
     .ui-catalog-interactives
+        canvas.ui-canvas.js-canvas-bg
         .grid.grid--container
             .row
                 .col.col--xl-12
